[gd_scene load_steps=8 format=3 uid="uid://chrx3g350ke3y"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_hn5ax"]
[ext_resource type="Texture2D" uid="uid://b7lr1kpppumb4" path="res://assets/mm_background.png" id="2_ikeru"]
[ext_resource type="Texture2D" uid="uid://qs166gtuuqnv" path="res://assets/play_button.png" id="3_g04qr"]
[ext_resource type="AudioStream" uid="uid://bcmgmf53ptbps" path="res://assets/sounds/mainMenu-calmMusic.mp3" id="3_it2cw"]
[ext_resource type="Texture2D" uid="uid://xb0o5mvdwu3h" path="res://assets/quit_button.png" id="4_5ruvn"]
[ext_resource type="Texture2D" uid="uid://cda6tni6qfwcy" path="res://assets/sprite.png" id="6_losa5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ugqt2"]
texture = ExtResource("6_losa5")

[node name="MainMenu" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_hn5ax")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(577, 327)
texture = ExtResource("2_ikeru")
region_enabled = true
region_rect = Rect2(-689, -408, 3028.81, 1533.44)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_it2cw")
parameters/looping = true

[node name="Title" type="Label" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -305.0
offset_top = 22.0
offset_right = 334.0
offset_bottom = 239.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_ugqt2")

[node name="StartGame" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -57.0
offset_right = -53.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Start Game"
texture_normal = ExtResource("3_g04qr")

[node name="QuitGame" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 58.0
offset_top = -57.0
offset_right = 234.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Quit Game"
texture_normal = ExtResource("4_5ruvn")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_quit_pressed"]
